Missed overflow bug xD

--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@
 
 
 body {
+    overflow: hidden;
     min-height: 100vh;
     font-family: Arial, sans-serif;
     background-repeat: no-repeat;
